Make linting step more permissive in CI
- Allow ruff installation to fail gracefully
- Don't fail build on linting warnings
- Keep continue-on-error for non-blocking linting

--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -47,8 +47,8 @@ jobs:
     - name: Run linting
       working-directory: ./backend
       run: |
-        pip install ruff
-        ruff check app/ --select E,F,W --ignore E501
+        pip install ruff || true
+        ruff check app/ --select E,F,W --ignore E501 || echo "Linting completed with warnings"
       continue-on-error: true
 
     - name: Run tests
